--- a/estilo.css
+++ b/estilo.css
@@ -14,5 +14,9 @@ header{
     color: black;
 }
 .pie{
+    display: flex;
+    height: 50PX 60px;
+    background-color: blueviolet;
+    justify-content: space-between;
     
 }
